Fix: Element that contains the ordering icons shoul have height as it is focusable and the focus ring needs to be clearly visible

--- a/css/ordering.scss
+++ b/css/ordering.scss
@@ -59,7 +59,8 @@ table.dataTable thead {
 		&.dt-ordering-desc {
 			.dt-column-order {
 				position: relative;
-				width: 12px;
+				width: 10px;
+				align-self: stretch;
 
 				&:before,
 				&:after {
